# CppExample

./: .gitignore  README.md
imgui_demo/: imgui_impl_sdl3.cpp  sdl3_opengl.cpp  sdl3_sdlgpu3.cpp  sdl3_sdlrenderer.cpp
kubuntu/BasicCMakeProjectExample/CMakeProject/: .clangd  CMakeLists.txt  CMakePresets.json
kubuntu/BasicCMakeProjectExample/CMakeProjectWithVcpkg/: CMakeLists.txt  CMakePresets.json
kubuntu/DevelopmentSetup/1.CMakeHelloWorld/doc/: README.md
kubuntu/DevelopmentSetup/2.VscodeCMakeClangdLldb/: CMakeLists.txt  main.cpp
kubuntu/DevelopmentSetup/3.VcpkgExample/: CMakeLists.txt
kubuntu/DevelopmentSetup/3.VcpkgExample/doc/: README.md
kubuntu/DevelopmentSetup/4.CmakePresetExample/: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
kubuntu/DevelopmentSetup/4.CmakePresetExample/doc/: README.md
kubuntu/NewProject/: main.cpp
kubuntu/NewProjectWithVcpkg/: CMakeLists.txt
windows/BasicCMakeProjectExample/CMakeProject/: CMakeLists.txt  CMakePresets.json
windows/BasicCMakeProjectExample/CMakeProjectWithVcpkg/: CMakeLists.txt  CMakePresets.json  main.cpp
windows/CMakeHelloWorld/: READMD.md
windows/CmakePresetExample/doc/: README.md
windows/DevelopmentSetup/1.CMakeHelloWorld/: CMakeLists.txt
windows/DevelopmentSetup/3.VcpkgExample/doc/: README.md
windows/NewProject/: CMakeLists.txt  CMakePresets.json
windows/NewProjectWithVcpkg/: .clang-tidy  CMakePresets.json
windows/VcpkgExample/: CMakeLists.txt
windows/VscodeCMakeClangdLldb/: READMD.md
windows/VscodeCMakeClangdLldb/doc/: READMD.md
